-pipeline -mds -maven build update -basic security config